added html template and created html using await async

--- a/index.html
+++ b/index.html
@@ -1,32 +1,4 @@
-const colors = {
-  green: {
-    wrapperBackground: "#E6E1C3",
-    headerBackground: "#C1C72C",
-    headerColor: "black",
-    photoBorderColor: "black",
-  },
-  blue: {
-    wrapperBackground: "#5F64D3",
-    headerBackground: "#26175A",
-    headerColor: "white",
-    photoBorderColor: "#73448C",
-  },
-  pink: {
-    wrapperBackground: "#879CDF",
-    headerBackground: "#FF8374",
-    headerColor: "white",
-    photoBorderColor: "#FEE24C",
-  },
-  red: {
-    wrapperBackground: "#DE9967",
-    headerBackground: "#870603",
-    headerColor: "white",
-    photoBorderColor: "white",
-  },
-};
-
-function generateHTML(data) {
-  return `<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
    <head>
       <meta charset="UTF-8" />
@@ -52,7 +24,7 @@ function generateHTML(data) {
          height: 100%;
          }
          .wrapper {
-         background-color: ${colors[data.color].wrapperBackground};
+         background-color: #879CDF;
          padding-top: 100px;
          }
          body {
@@ -94,8 +66,8 @@ function generateHTML(data) {
          display: flex;
          justify-content: center;
          flex-wrap: wrap;
-         background-color: ${colors[data.color].headerBackground};
-         color: ${colors[data.color].headerColor};
+         background-color: #FF8374;
+         color: white;
          padding: 10px;
          width: 95%;
          border-radius: 6px;
@@ -106,7 +78,7 @@ function generateHTML(data) {
          border-radius: 50%;
          object-fit: cover;
          margin-top: -75px;
-         border: 6px solid ${colors[data.color].photoBorderColor};
+         border: 6px solid #FEE24C;
          box-shadow: rgba(0, 0, 0, 0.3) 4px 1px 20px 4px;
          }
          .photo-header h1, .photo-header h2 {
@@ -149,8 +121,8 @@ function generateHTML(data) {
          .card {
            padding: 20px;
            border-radius: 6px;
-           background-color: ${colors[data.color].headerBackground};
-           color: ${colors[data.color].headerColor};
+           background-color: #FF8374;
+           color: white;
            margin: 20px;
          }
          
@@ -175,14 +147,14 @@ function generateHTML(data) {
       <div class="container">
         <div class="wrapper">
           <div class="photo-header">
-            <img src="${data.avatar_url}" />
+            <img src="https://avatars.githubusercontent.com/u/54513755?v=4" />
             <h1>Hi!</h1>
-            <h2>My name is ${data.name}</h2>
-            <h5>Currently at ${data.location}</h5>
+            <h2>My name is toribromma</h2>
+            <h5>Currently at Orange, CA</h5>
             <ul class="links-nav">
-              <li class="nav-link"><a>${data.location}</a></li>
-              <li class="nav-link"><a href="${data.html_url}">Github</a></li>
-              <li class="nav-link"><a href="${data.blog}">Blog</a></li>
+              <li class="nav-link"><a>Orange, CA</a></li>
+              <li class="nav-link"><a href="https://github.com/toribromma">Github</a></li>
+              <li class="nav-link"><a href="">Blog</a></li>
             </ul>
           </div>
         </div>
@@ -191,7 +163,8 @@ function generateHTML(data) {
       <div class="container">
         <div class="row">
           <div class="col">
-            <h3>${data.bio}</h3>
+            <h3>Full Stack Web Developer - HTML, CSS, Javascript,  Node, Express, MongoDB, Mongoose, IndexDB, MYSQL, React.JS, Handlebars.js.
+</h3>
           </div>
         </div>
       </div>
@@ -201,13 +174,13 @@ function generateHTML(data) {
           <div class="col">
             <div class="card">
               <h3>Public Repositories</h3>
-              <h4>${data.public_repos}</h4>
+              <h4>38</h4>
             </div>
           </div>
           <div class="col">
             <div class="card">
               <h3>Followers</h3>
-              <h4>${data.followers}</h4>
+              <h4>12</h4>
             </div>
           </div>
         </div>
@@ -221,7 +194,7 @@ function generateHTML(data) {
           <div class="col">
             <div class="card">
               <h3>Following</h3>
-              <h4>${data.following}</h4>
+              <h4>5</h4>
             </div>
           </div>
         </div>
@@ -231,10 +204,4 @@ function generateHTML(data) {
     <div class="wrapper"></div>
   </html>
      </html>
-      `;
-}
-
-module.exports = {
-  colors: colors,
-  generateHTML: generateHTML,
-};
+      
