added 2nd function to loop through repositories to find stargazing count and added html-pdf

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
          height: 100%;
          }
          .wrapper {
-         background-color: #879CDF;
+         background-color: #E6E1C3;
          padding-top: 100px;
          }
          body {
@@ -55,6 +55,7 @@
          }
          h5 {
          font-size: 1.3em;
+         text-align: center;
          }
          h6 {
          font-size: 1.2em;
@@ -66,8 +67,8 @@
          display: flex;
          justify-content: center;
          flex-wrap: wrap;
-         background-color: #FF8374;
-         color: white;
+         background-color: #C1C72C;
+         color: black;
          padding: 10px;
          width: 95%;
          border-radius: 6px;
@@ -78,7 +79,7 @@
          border-radius: 50%;
          object-fit: cover;
          margin-top: -75px;
-         border: 6px solid #FEE24C;
+         border: 6px solid black;
          box-shadow: rgba(0, 0, 0, 0.3) 4px 1px 20px 4px;
          }
          .photo-header h1, .photo-header h2 {
@@ -121,8 +122,8 @@
          .card {
            padding: 20px;
            border-radius: 6px;
-           background-color: #FF8374;
-           color: white;
+           background-color: #C1C72C;
+           color: black;
            margin: 20px;
          }
          
@@ -143,65 +144,54 @@
           } 
          }
       </style>
-      <body>
-      <div class="container">
-        <div class="wrapper">
-          <div class="photo-header">
-            <img src="https://avatars.githubusercontent.com/u/54513755?v=4" />
-            <h1>Hi!</h1>
-            <h2>My name is toribromma</h2>
-            <h5>Currently at Orange, CA</h5>
-            <ul class="links-nav">
-              <li class="nav-link"><a>Orange, CA</a></li>
-              <li class="nav-link"><a href="https://github.com/toribromma">Github</a></li>
-              <li class="nav-link"><a href="">Blog</a></li>
-            </ul>
-          </div>
-        </div>
+      <body class="wrapper">
+        <header class="photo-header">
+          <img src="https://avatars.githubusercontent.com/u/54513755?v=4" />
+          <h1>Hi!</h1>
+          <h2>My name is toribromma</h2>
+          <h3>Currently at Orange, CA</h3>
+          <ul class="links-nav">
+            <li class="nav-link"><a href="https://www.google.com/maps/place/Orange, CA"><i class="fas fa-location-arrow"></i> Orange, CA</a></li>
+            <li class="nav-link"><a href="https://github.com/toribromma"><i class="fab fa-github"></i> GitHub</a></li>
+            <li class="nav-link"><a href=""><i class="fas fa-rss-square"></i> Blog</a></li>
+          </ul>
+      </header>
       </div>
-  
-      <div class="container">
+      <main class="container">
         <div class="row">
           <div class="col">
-            <h3>Full Stack Web Developer - HTML, CSS, Javascript,  Node, Express, MongoDB, Mongoose, IndexDB, MYSQL, React.JS, Handlebars.js.
-</h3>
+            <h4>Full Stack Web Developer - HTML, CSS, Javascript,  Node, Express, MongoDB, Mongoose, IndexDB, MYSQL, React.JS, Handlebars.js.
+</h4>
           </div>
         </div>
-      </div>
-  
-      <div class="container">
         <div class="row">
           <div class="col">
             <div class="card">
-              <h3>Public Repositories</h3>
-              <h4>38</h4>
+              <h4>Public Repositories</h4>
+              <h5>38</h5>
             </div>
           </div>
           <div class="col">
             <div class="card">
-              <h3>Followers</h3>
-              <h4>12</h4>
+              <h4>Followers</h4>
+              <h5>12</h5>
             </div>
           </div>
         </div>
         <div class="row">
           <div class="col">
             <div class="card">
-              <h3>GitHub Stars</h3>
-              <h4>100</h4>
+              <h4>GitHub Stars</h4>
+              <h5>8</h5>
             </div>
           </div>
           <div class="col">
             <div class="card">
-              <h3>Following</h3>
-              <h4>5</h4>
+              <h4>Following</h4>
+              <h5>5</h5>
             </div>
           </div>
-        </div>
-      </div>
-    </body>
-  
-    <div class="wrapper"></div>
-  </html>
-     </html>
+        </main>
+  </body>
+</html>
       
