--- a/index-template.html
+++ b/index-template.html
@@ -15,106 +15,115 @@
     <title>Document</title>
   </head>
   <style>
-     @page {
-       margin: 0;
-     }
+    @page {
+      margin: 0;
+    }
     *,
     *::after,
     *::before {
-    box-sizing: border-box;
+      box-sizing: border-box;
     }
-    html, body {
-    padding: 0;
-    margin: 0;
+    html,
+    body {
+      padding: 0;
+      margin: 0;
     }
-    html, body, .wrapper {
-    height: 100%;
+    html,
+    body,
+    .wrapper {
+      height: 100%;
     }
     .wrapper {
-    background-color: #e6e1c3;
-    padding-top: 100px;
+      background-color: #e6e1c3;
+      padding-top: 100px;
     }
     body {
-    background-color: white;
-    -webkit-print-color-adjust: exact !important;
-    font-family: 'Cabin', sans-serif;
+      background-color: white;
+      print-color-adjust: exact !important;
+      font-family: "Cabin", sans-serif;
     }
     main {
-    background-color: #E9EDEE;
-    height: auto;
-    padding-top: 30px;
+      background-color: #e9edee;
+      height: auto;
+      padding-top: 30px;
     }
-    h1, h2, h3, h4, h5, h6 {
-    font-family: 'BioRhyme', serif;
-    margin: 0;
+    h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6 {
+      font-family: "BioRhyme", serif;
+      margin: 0;
     }
     h1 {
-    font-size: 3em;
+      font-size: 3em;
     }
     h2 {
-    font-size: 2.5em;
+      font-size: 2.5em;
     }
     h3 {
-    font-size: 2em;
+      font-size: 2em;
     }
     h4 {
-    font-size: 1.5em;
+      font-size: 1.5em;
     }
     h5 {
-    font-size: 1.3em;
+      font-size: 1.3em;
     }
     h6 {
-    font-size: 1.2em;
+      font-size: 1.2em;
     }
     .photo-header {
-    position: relative;
-    margin: 0 auto;
-    margin-bottom: -50px;
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    background-color: #C1C72C;
-    color: black;
-    padding: 10px;
-    width: 95%;
-    border-radius: 6px;
+      position: relative;
+      margin: 0 auto;
+      margin-bottom: -50px;
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+      background-color: #c1c72c;
+      color: black;
+      padding: 10px;
+      width: 95%;
+      border-radius: 6px;
     }
     .photo-header img {
-    width: 250px;
-    height: 250px;
-    border-radius: 50%;
-    object-fit: cover;
-    margin-top: -75px;
-    border: 6px solid black;
-    box-shadow: rgba(0, 0, 0, 0.3) 4px 1px 20px 4px;
+      width: 250px;
+      height: 250px;
+      border-radius: 50%;
+      object-fit: cover;
+      margin-top: -75px;
+      border: 6px solid black;
+      box-shadow: rgba(0, 0, 0, 0.3) 4px 1px 20px 4px;
     }
-    .photo-header h1, .photo-header h2 {
-    width: 100%;
-    text-align: center;
+    .photo-header h1,
+    .photo-header h2 {
+      width: 100%;
+      text-align: center;
     }
     .photo-header h1 {
-    margin-top: 10px;
+      margin-top: 10px;
     }
     .links-nav {
-    width: 100%;
-    text-align: center;
-    padding: 20px 0;
-    font-size: 1.1em;
+      width: 100%;
+      text-align: center;
+      padding: 20px 0;
+      font-size: 1.1em;
     }
     .nav-link {
-    display: inline-block;
-    margin: 5px 10px;
+      display: inline-block;
+      margin: 5px 10px;
     }
     .workExp-date {
-    font-style: italic;
-    font-size: .7em;
-    text-align: right;
-    margin-top: 10px;
+      font-style: italic;
+      font-size: 0.7em;
+      text-align: right;
+      margin-top: 10px;
     }
     .container {
-    padding: 50px;
-    padding-left: 100px;
-    padding-right: 100px;
+      padding: 50px;
+      padding-left: 100px;
+      padding-right: 100px;
     }
 
     .row {
@@ -128,102 +137,126 @@
     .card {
       padding: 20px;
       border-radius: 6px;
-      background-color: #C1C72C;
+      background-color: #c1c72c;
       color: black;
       margin: 20px;
     }
 
     .col {
-    flex: 1;
-    text-align: center;
+      flex: 1;
+      text-align: center;
     }
 
-    a, a:hover {
-    text-decoration: none;
-    color: inherit;
-    font-weight: bold;
+    a,
+    a:hover {
+      text-decoration: none;
+      color: inherit;
+      font-weight: bold;
     }
 
     @media print {
-     body {
-       zoom: .75;
-     }
+      body {
+        zoom: 0.75;
+      }
     }
   </style>
-  <body>
-    <div class="container">
-      <div class="wrapper">
-        <div class="photo-header">
-          <img src=${data.avatar_url}/>
+  <body class="wrapper">
+        <header class="photo-header">
+          <img src="${data.avatar_url}" />
           <h1>Hi!</h1>
-          <h2>My name is ${data.name} </h2>
+          <h2>My name is ${data.name}</h2>
+          <h3>Currently at ${data.location}</h3>
+          <ul class="links-nav">
+            <li class="nav-link"><a>${data.location}</a></li>
+            <li class="nav-link"><a href="${data.html_url}">Github</a></li>
+            <li class="nav-link"><a href="${data.blog}">Blog</a></li>
+          </ul>
+      </header>
+      </div>
+      <main class="container">
+        <div class="row">
+          <div class="col">
+            <h4>${data.bio}</h4>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col">
+            <div class="card">
+              <h4>Public Repositories</h4>
+              <h5>${data.public_repos}</h5>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card">
+              <h4>Followers</h4>
+              <h5>${data.followers}</h5>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col">
+            <div class="card">
+              <h4>GitHub Stars</h4>
+              <h5>100</h5>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card">
+              <h4>Following</h4>
+              <h5>${data.following}</h5>
+            </div>
+          </div>
+        </main>
+  </body>
+  <!-- <div class="wrapper">
+    <body>
+        <header class="photo-header">
+          <img src="${data.avatar_url}" />
+          <h1>Hi!</h1>
+          <h2>My name is ${data.name}</h2>
           <h5>Currently at ${data.location}</h5>
           <ul class="links-nav">
             <li class="nav-link"><a>${data.location}</a></li>
-            <li class="nav-link"><a href=${data.html_url}>Github</a></li>
-            <li class="nav-link"><a href=${data.blog}>Blog</a></li>
+            <li class="nav-link"><a href="${data.html_url}">Github</a></li>
+            <li class="nav-link"><a href="${data.blog}">Blog</a></li>
           </ul>
         </div>
-      </div>
-    </div>
-
-    <div class="container">
-        <div class="row">
-          <div class="col">
-            <h3>${data.bio}</h3>
+      </header>
+        <div class="container">
+          <div class="row">
+            <div class="col">
+              <h3>${data.bio}</h3>
+            </div>
           </div>
-        </div>
+          <div class="row">
+            <div class="col">
+              <div class="card">
+                <h3>Public Repositories</h3>
+                <h4>${data.public_repos}</h4>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card">
+                <h3>Followers</h3>
+                <h4>${data.followers}</h4>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col">
+              <div class="card">
+                <h3>GitHub Stars</h3>
+                <h4>100</h4>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card">
+                <h3>Following</h3>
+                <h4>${data.following}</h4>
+              </div>
+            </div>
+          </div>
     </div>
-
-    <div class="container">
-<div class="row">
-      <div class="col">
-        <div class="card">
-          <h3>Public Repositories</h3>
-          <h4>${data.public_repos}</h4>
-        </div>
-      </div>
-      <div class="col">
-        <div class="card">
-          <h3>Followers</h3>
-          <h4>${data.followers}</h4>
-        </div>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col">
-        <div class="card">
-          <h3>GitHub Stars</h3>
-          <h4>100</h4>
-        </div>
-      </div>
-      <div class="col">
-        <div class="card">
-          <h3>Following</h3>
-          <h4>${data.following}</h4>
-        </div>
-      </div>
-    </div>
-    </div> 
-
   </body>
-
-
-   <div class="wrapper">
-   
-   </div>
-   
-
-
-
-
-
-
-
-
-
-        
-      
-
-
+</div> -->
 </html>
